style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');

:root {
    --very-dark-purple: #1C1724;
    --dark-purple: #1B0B3B;
    --light-purple: #AB7AAE;
    --grayish-white: #D9D9D9;
    --white: #fcf7fc;
    --big-headings-mobile: 2.25rem;
    --small-headings-mobile: 1.15rem;
    --small-paragraphs-mobile: 1rem;
    --big-headings-desktop: 2.5rem;
    --small-headings-desktop: 1.25rem;
    --small-paragraphs-desktop: 1.1rem;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

li {
    list-style: none;
}

a {
    text-decoration: none;
}

input:focus {
    outline: none;
}

button {
    cursor: pointer;
}

body {
    min-height: 100vh;
    background-color: var(--white);
    scroll-behavior:smooth;
}

header {
    display: flex;
    flex-direction: column;
    background-color: var(--dark-purple);
    background-image: url('assets/waves.svg');
    background-repeat:repeat-y;
    background-size: cover;
}

header nav ul {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 1rem;
}

nav {
    border-radius: 5px;
    background-color: var(--white);
    font-size: 0.9rem;
    margin: 2rem;
    padding: 1.5rem;
}

nav ul li {
    font-weight: 500;
    
}

nav ul li a:hover {
    color: var(--light-purple);
    transition: all 0.3s ease-in-out;
}

.nav-logo img {
    width: 5.5rem;
    background-color: var(--white);
    padding: 0.75rem;
    border-radius: 5px;
    height: auto;
    position: relative;
}

.nav-home, .nav-about, .nav-features, .nav-vision, .nav-contact{
    display: none;
}

.nav-request-features a {
    background-color: var(--dark-purple);
    padding: 0.55rem 1rem;
    color: var(--white);
    border-radius: 5px;
}

.nav-request-features a:hover {
    color: var(--white);
    background-color: var(--light-purple);
    transition: all 0.3s ease-in-out;
}

.hero-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0 2rem 2rem;
}

.app-description {
    display: flex;
    flex-direction: column;
}

.app-description h1 {
    font-size: var(--big-headings-mobile);
    color: var(--white);
    margin: 1rem 0;
    margin-top: 3rem;
    text-align: center;
}

.app-description h1 span {
    color: var(--light-purple);
}

.app-description > p {
    font-size: var(--small-paragraphs-mobile);
    color: var(--white);
    margin: 1rem 0;
    margin-bottom: 2rem;
    text-align: justify;
    opacity: 0.65;
}

.hero-section .download {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 1rem 0;
}

.hero-section  .download > h2 {
    font-size: var(--small-headings-mobile);
    font-weight: 600;
    color: var(--grayish-white);
    margin: 1rem 0;
    text-align: center;
}

.android-apple-links {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 1rem;
    align-items: center;
}

.android-apple-links a {
    background-color: black;
    color: white;
    padding: 0.5rem 1rem;
    border-radius: 5px;
    font-size: 0.8rem;
    display: flex; 
    gap: 1rem;
    width: 11rem;
    justify-content: center;
    align-items: flex-start;
    cursor: pointer;
}

.android-apple-links a:hover {
    opacity: 0.9;
    transition: all 0.3s ease-in-out;
}

.mockup img {
    width: 20rem;
    height: auto;
}

.android-apple-links img {
    width: 30px;
    height: auto;
}

.about-app {
    padding: 3rem;
    background-color: var(--white);
    background-image: url('assets/circles.svg');
    background-repeat:repeat;
    background-size: cover;
}

.about-app h1 {
    font-size: var(--big-headings-mobile);
    color: var(--dark-purple);
    margin-bottom: 2rem;
    text-align: center;
}

.about-app > p {
    font-size: var(--small-paragraphs-mobile);
    color: var(--very-dark-purple);
    opacity: 0.8;
    margin: 2rem 0;
    text-align: justify;
}

.about-app-1 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.about-app-2 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 4rem;
}

.about-app-1-cards, .about-app-2-cards {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

.about-app-2-cards .card, .about-app-1-cards .card {
    display: flex;
    flex-direction: row;
    gap: 1rem;
    background-color: var(--white);
    padding: 1.5rem 2rem;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

.about-app-2-cards .card h2, .about-app-1-cards .card h2{
    font-size: var(--small-headings-mobile);
    color: var(--dark-purple);
}

.about-app-2-cards .card p, .about-app-1-cards .card p {
    text-align: justify;
    font-size: var(--small-paragraphs-mobile);
    color: var(--very-dark-purple);
    opacity: 0.8;
}

.check-icon img {
    margin: 2px;
}

.app-features {
    padding: 2rem;
    background-color: var(--light-purple);
    background-image: url('assets/waves.svg');
    background-repeat:repeat-y;
    background-size: cover;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.app-features h1 {
    font-size: var(--big-headings-mobile);
    color: var(--white);
    margin-top: 2rem;
    text-align: center;
}

.app-features > p {
    font-size: var(--small-paragraphs-mobile);
    color: var(--white);
    opacity: 0.8;
    text-align: justify;
    position: relative;
    top: 4rem;
    
}

.video-preview {
    position: relative;
    top:10rem;
}

iframe {
    border: none;
    width: 20rem;
    height: 21.5rem;
}
/* ... */

